--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,9 +13,9 @@
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ site.title }}">
-  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
+  <meta name="twitter:url" content="{{ site.baseurl }}{{ page.url }}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-  <meta name="twitter:image:src" content="{{ site.url }}/assets/img/yahoo.jpg">
+  <meta name="twitter:image:src" content="{{ site.baseurl }}/assets/img/yahoo.jpg">
 
   <meta property="og:site_name" content="Site Name">
   <meta property="og:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
