--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,7 +8,7 @@
 
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{ site.baseurl }}assets/img/yahoo.jpg">
+  <meta property="og:image" content="{{ site.baseurl }}/assets/img/yahoo.jpg">
   <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}/">
 
   <meta name="twitter:card" content="summary">
