--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,12 +8,12 @@
 
   <meta property="og:title" content="{{ page.title }}">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="{{ site.baseurl }}/assets/img/yahoo.jpg">
-  <meta property="og:url" content="{{ site.baseurl }}{{ page.url }}/">
+  <meta property="og:image" content="{{ site.url }}/assets/img/yahoo.jpg">
+  <meta property="og:url" content="{{ site.url }}{{ page.url }}/">
 
   <meta name="twitter:card" content="summary">
   <meta name="twitter:title" content="{{ site.title }}">
-  <meta name="twitter:url" content="{{ site.baseurl }}{{ page.url }}">
+  <meta name="twitter:url" content="{{ site.url }}{{ page.url }}">
   <meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   <meta name="twitter:image:src" content="{{ site.baseurl }}/assets/img/yahoo.jpg">
 
